crates/plotnik-tests/tests/02-parser/recovery_unexpected/capture_type_without_capture.txt
Q = (a) :: Foo
------------------ DIAGNOSTICS -------------------
error: capture type has no capture
 --> query.ptk:1:9
  |
1 | Q = (a) :: Foo
  |         ^^
  |
help: capture types attach to a regular capture: `(node) @name :: text`
